--- a/config/database.yml
+++ b/config/database.yml
@@ -5,34 +5,34 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql2
-  database: ms.fix.me.app_development
+  database: davidmb_development
   encoding: utf8
-  username: msdev
-  password: password
+  username: root
+  password: david
   host: 127.0.0.1
 
 development_replica:
   adapter: mysql2
-  database: ms.fix.me.app_development
+  database: davidmb_development
   encoding: utf8
-  username: msdev
-  password: password
+  username: root
+  password: david
   host: localhost
 
 test: &test
   adapter: mysql2
-  database: ms.fix.me.app_test
+  database: davidmb_test
   encoding: utf8
-  username: msdev
-  password: password
+  username: root
+  password: david
   host: localhost
   
 test_replica:
   adapter: mysql2
-  database: ms.fix.me.app_test
+  database: davidmb_test
   encoding: utf8
-  username: msdev
-  password: password
+  username: root
+  password: david
   host: localhost
 
 cucumber:
